; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-udp-targets.c_udp_target_set_to_tree.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-udp-targets.c_udp_target_set_to_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.udp_target_set = type { i32, i32, i64, %struct.udp_target*, %struct.udp_target* }
%struct.udp_target = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @udp_target_set_to_tree(%struct.udp_target_set* %0) #0 {
  %2 = alloca %struct.udp_target_set*, align 8
  %3 = alloca %struct.udp_target*, align 8
  store %struct.udp_target_set* %0, %struct.udp_target_set** %2, align 8
  %4 = load %struct.udp_target_set*, %struct.udp_target_set** %2, align 8
  %5 = getelementptr inbounds %struct.udp_target_set, %struct.udp_target_set* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = icmp eq i32 %6, 2
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load %struct.udp_target_set*, %struct.udp_target_set** %2, align 8
  %11 = getelementptr inbounds %struct.udp_target_set, %struct.udp_target_set* %10, i32 0, i32 4
  %12 = load %struct.udp_target*, %struct.udp_target** %11, align 8
  store %struct.udp_target* %12, %struct.udp_target** %3, align 8
  %13 = load %struct.udp_target*, %struct.udp_target** %3, align 8
  %14 = load %struct.udp_target_set*, %struct.udp_target_set** %2, align 8
  %15 = getelementptr inbounds %struct.udp_target_set, %struct.udp_target_set* %14, i32 0, i32 3
  store %struct.udp_target* %13, %struct.udp_target** %15, align 8
  %16 = load %struct.udp_target_set*, %struct.udp_target_set** %2, align 8
  %17 = getelementptr inbounds %struct.udp_target_set, %struct.udp_target_set* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.udp_target_set*, %struct.udp_target_set** %2, align 8
  %19 = getelementptr inbounds %struct.udp_target_set, %struct.udp_target_set* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.udp_target*, %struct.udp_target** %3, align 8
  %22 = call i32 (...) @lrand48()
  %23 = call i64 @tree_insert_udp_target_by_fpid(i64 %20, %struct.udp_target* %21, i32 %22)
  %24 = load %struct.udp_target_set*, %struct.udp_target_set** %2, align 8
  %25 = getelementptr inbounds %struct.udp_target_set, %struct.udp_target_set* %24, i32 0, i32 2
  store i64 %23, i64* %25, align 8
  %26 = load %struct.udp_target_set*, %struct.udp_target_set** %2, align 8
  %27 = getelementptr inbounds %struct.udp_target_set, %struct.udp_target_set* %26, i32 0, i32 1
  store i32 1, i32* %27, align 4
  %28 = load %struct.udp_target_set*, %struct.udp_target_set** %2, align 8
  %29 = getelementptr inbounds %struct.udp_target_set, %struct.udp_target_set* %28, i32 0, i32 0
  store i32 3, i32* %29, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @tree_insert_udp_target_by_fpid(i64, %struct.udp_target*, i32) #1

declare dso_local i32 @lrand48(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
